# 016-hft-orderbook-gateway

./: Cargo.toml  README.md
benches/: orderbook_bench.rs
src/: lib.rs  main.rs  pipeline.rs
src/network/: mod.rs  tcp_broadcast.rs
src/options/: mod.rs
src/orderbook/: mod.rs
src/pricing/: mod.rs
src/protocol/: mod.rs
