[package]
name = "hft-orderbook-gateway"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
byteorder = "1.5"
socket2 = "0.5"
parking_lot = "0.12"
arrayvec = "0.7"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ahash = "0.8"
crossbeam-queue = "0.3"
ctrlc = "3.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "orderbook_bench"
harness = false
